# contexto-solver

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  hello.py  pyproject.toml
src/app/: contexto_app.py
src/config/: logger.py  settings.py
src/db/: setup_qdrant.py  utils.py
src/game/: contexto_game.py
src/solver/: contexto_solver.py
