[project]
name = "contexto-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "qdrant-client>=1.14.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
    "typer>=0.15.3",
    "streamlit>=1.30.0", # Add streamlit
    "pandas>=2.0.0", # Add pandas
    "polars>=1.29.0",
    "nltk>=3.9.1",
    "watchdog>=6.0.0",
]
